@@ -1,3 +1,14 @@
+2008-01-07  Dan Bernstein  <mitz@apple.com>
+
+        Reviewed by John Sullivan.
+
+        - make the ATSUI code path work with custom fonts rather than crash
+
+        * platform/graphics/mac/FontCustomPlatformData.cpp:
+        (WebCore::FontCustomPlatformData::fontPlatformData):
+        * platform/graphics/mac/FontMac.mm:
+        (WebCore::initializeATSUStyle):
+
 2008-01-07  Thiago Macieira  <thiago.macieira@trolltech.com>
 
         Reviewed by Simon.
